--- a/style.css
+++ b/style.css
@@ -35,7 +35,10 @@ color:#601cfc;
 
 }
 section{
-padding: 100px 150px;
+padding-top: 100px;
+padding-bottom:120px;
+Padding-right:200px;
+padding-left:20px;
 }
 
 .main{
