--- a/style.css
+++ b/style.css
@@ -35,10 +35,8 @@ color:#601cfc;
 
 }
 section{
-padding-top: 100px;
-padding-bottom:120px;
-Padding-right:200px;
-padding-left:20px;
+padding: 100px 170px;
+
 }
 
 .main{
