--- a/style.css
+++ b/style.css
@@ -238,3 +238,9 @@ font-weight: 700;
     margin-bottom: 60px;
 }
 
+.main{
+padding-right:200px;
+Padding-lift:20px;
+padding-top:100px;
+padding-bottom:120px;
+   }
