--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ padding: 100px 200px;
   background-size: cover;
 background-position: center;
 background-attachment: fixed;
-    Padding:;
+    Padding: 100px 10px;
 }
 
 
