--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 padding: 10px 30px;
-padding-right: 100px;
+padding-right: 80px;
+padding-left: 20px;
 }
 .logo{
     text-decoration: none;
