--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ padding: 100px 200px;
 background-position: center;
 background-attachment: fixed;
 padding: 100px 10px;
+
 }
 
 .main h2{
@@ -61,6 +62,7 @@ padding: 100px 10px;
     font-weight: 500;
     margin-top: 20px;
     margin-bottom: ;
+    opacity: 0.8;
 }
 
 .main h2 span{ 
@@ -69,7 +71,7 @@ margin-top: 10px;
 color:#4e9eff;
 font-size: 2em;
 font-weight: 600 ;
-
+opacity: 0.8;
 }
 
 .main h3{
@@ -79,7 +81,7 @@ font-weight: 700;
 letter-spacing: 1px;
 margin-top: 10px;
 margin-bottom: 30px;
-
+opacity: 0.8;
 }
 .main-btn{
 color: #fff;
@@ -93,6 +95,7 @@ letter-spacing: 1px;
 border-radius: 15px;
 margin-bottom: 40px;
 transition:0.7s ease;
+opacity: 0.8;
 }
 
 .main-btn:hover{
