--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ padding: 100px 10px;
 
 .main h2{
     color:white;
-    font-size: 1em;
+    font-size: 1.4em;
     font-weight: 500;
     margin-top: 20px;
     margin-bottom: ;
@@ -69,14 +69,14 @@ padding: 100px 10px;
 display: inline-block;
 margin-top: 10px; 
 color:#4e9eff;
-font-size: 2em;
+font-size: 3em;
 font-weight: 600 ;
 opacity: 0.8;
 }
 
 .main h3{
 color:#fff;
-font-size: 1.4em;
+font-size: 2em;
 font-weight: 700;
 letter-spacing: 1px;
 margin-top: 10px;
@@ -210,6 +210,26 @@ transform: scale(1.1);
 opacity: 0.9; 
 
 }
+
+.main-btn2{
+    color: #fff;
+    background-color: #3a6cf4;
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: 600;
+    display: inline-block;
+    padding: 0.9375em  2.187em;
+    letter-spacing: 1px;
+    border-radius: 15px;
+    margin-bottom: 40px;
+    transition:0.7s ease
+}
+.main-btn2:hover{
+    background-color: #0a49f6;
+    transform: scale(1.1);
+    
+    } 
+
 .project-image img{
     width: 100%;
 }
