--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ padding: 100px 10px;
 
 .main h2{
     color:white;
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-weight: 500;
     margin-top: 20px;
     margin-bottom: ;
@@ -69,14 +69,14 @@ padding: 100px 10px;
 display: inline-block;
 margin-top: 10px; 
 color:#4e9eff;
-font-size: 3em;
+font-size: 2.5em;
 font-weight: 600 ;
 opacity: 0.8;
 }
 
 .main h3{
 color:#fff;
-font-size: 2em;
+font-size: 1.7em;
 font-weight: 700;
 letter-spacing: 1px;
 margin-top: 10px;
@@ -213,7 +213,7 @@ opacity: 0.9;
 
 .main-btn2{
     color: #fff;
-    background-color: #3a6cf4;
+    background-color: rgb(58, 108, 244);
     text-decoration: none;
     font-size: 1em;
     font-weight: 600;
@@ -223,6 +223,7 @@ opacity: 0.9;
     border-radius: 15px;
     margin-bottom: 40px;
     transition:0.7s ease
+
 }
 .main-btn2:hover{
     background-color: #0a49f6;
@@ -241,6 +242,9 @@ opacity: 0.9;
 padding: 1.1em;
 
 }
+
+
+
 
 
 
