--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ padding-right: 100px;
     color: #3a6cf4;
     font-size: 1.7em;
     font-weight: 500;
-padding-right:30px;
+padding-right:10px;
+    padding-lift:10px;
 
 
 }
