--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ padding-right: 100px;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.8em;
+    margin-right: 10px;
 }
 .navigation a{
     text-decoration: none;
@@ -29,7 +30,7 @@ padding-right: 100px;
     font-size: 1.7em;
     font-weight: 500;
 padding-right:10px;
-    padding-lift:10px;
+    
 
 
 }
