--- a/style.css
+++ b/style.css
@@ -22,18 +22,23 @@ padding-right: 100px;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.8em;
-    margin-right: 10px;
 }
 .navigation a{
     text-decoration: none;
     color: #3a6cf4;
     font-size: 1.7em;
     font-weight: 500;
-padding-right:10px;
-    
-
+padding-right:30px;
 
 }
+
+
+.icons svg {
+fill: #3a6cf4;
+
+}
+
+
 .navigation a:hover{
 color:#601cfc;
 
