--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ padding-right: 100px;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.8em;
+    margin-right: 5px; 
 }
 .navigation a{
     text-decoration: none;
