--- a/style.css
+++ b/style.css
@@ -22,14 +22,14 @@ padding-right: 100px;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.8em;
-    margin-right: 5px; 
+    margin-right: px; 
 }
 .navigation a{
     text-decoration: none;
     color: #3a6cf4;
     font-size: 1.7em;
     font-weight: 500;
-padding-right:10px;
+padding-lift:10px;
 
 }
 
