--- a/style.css
+++ b/style.css
@@ -22,13 +22,13 @@ padding-right: 100px;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.8em;
-    margin-right:10px ; 
 }
 .navigation a{
     text-decoration: none;
     color: #3a6cf4;
     font-size: 1.7em;
     font-weight: 500;
+padding-right:10px;
 
 }
 
@@ -37,7 +37,7 @@ padding-right: 100px;
 fill: blue;
 }
 .icons .z{
-    fill: black;
+    fill: purble;
 }
 .icons .y {
     fill: red;
@@ -109,7 +109,7 @@ letter-spacing: 1px;
 border-radius: 15px;
 margin-bottom: 40px;
 transition:0.7s ease;
-opacity: 0.9;
+opacity: 0.8;
 }
 
 .main-btn:hover{
@@ -193,7 +193,7 @@ text-align: center;
 color: #3a6cf4;
 font-size: 1.2em;
 font-weight: 700;
-margin: 10px;
+margin:10px;
 }
 
 .projects{
