--- a/style.css
+++ b/style.css
@@ -266,7 +266,8 @@ padding: 1.1em;
     font-size: 20px;
     margin: 40px;
 text-align: center;
-font-weight: 650;
+font-weight: 720;
+    opasity:0.9;
 }
 
 
