--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ z-index: 999;
 display: flex;
 justify-content: space-between;
 align-items: center;
-padding: 10px 30px;
-padding-right: 100px;
+padding: 10px 200px;
+
 }
 .logo{
     text-decoration: none;
@@ -28,7 +28,7 @@ padding-right: 100px;
     color: #3a6cf4;
     font-size: 1.7em;
     font-weight: 500;
-padding-right:10px;
+padding-left:30px;
 
 }
 
@@ -266,12 +266,38 @@ padding: 1.1em;
     font-size: 20px;
     margin: 40px;
 text-align: center;
-font-weight: 720;
-    opasity:0.8;
+font-weight: 650;
 }
 
 
 .contact-us{
     text-align: center;
     margin-bottom: 60px;
+}
+
+
+@media (max-width:1023px){
+    header{
+      padding: 12px 20px;}
+
+
+.navigation a{
+    padding-left: 10px;
+}
+
+.title{
+    font-size:1.8em ;
+}
+
+section{
+padding: 80px 20px;
+}
+
+.content{
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
 }
