--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ padding: 100px 200px;
  
   background-size: cover;
 background-position: center;
-background-attachment: fixed;
+background-attachment: fixe;
 padding: 100px 10px;
 
 }
