--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ hr{
     height: 2px;
     background-color: #fb774b;
 }
+.star{
+    font-size: 0.8rem;
+    color: goldenrod;
+}
 /* -------------Navbar -----------*/
 .navbar{
  font-size: 16px;
